# pytorch-complex-tensor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
complex_tensor/: __init__.py  complex_tensor.py
complex_tensor/ops/: core.py
docs/: dtensor_wrap.md  gradcheck.md
src/complex_tensor/: __init__.py  complex_tensor.py
src/complex_tensor/ops/: __init__.py  _c10d_functional.py  _common.py  aten.py  core.py  prims.py
src/complex_tensor/test/: test_ops.py  utils.py
test/: test_ops.py
